STAC-16951 - Added logic for k8s token/service-bearer
